--- a/learning/20231103.md
+++ b/learning/20231103.md
@@ -1,6 +1,6 @@
 # 閏年の求め方
 まずはコードから
-```
+```Ruby
 def get_days(year, month)
     month_days = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
     if month == 2
@@ -42,7 +42,7 @@ month_days = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
 ② 年が100で割り切れて400で割り切れない場合は閏年ではない
 
 以上から以下の条件を記述する
-```
+```ruby
 if month == 2
       if year % 4 == 0
         if year % 100 == 0 && year % 400 != 0
