--- a/learning/20231103.md
+++ b/learning/20231103.md
@@ -1,5 +1,6 @@
 # 閏年の求め方
 まずはコードから
+
 ```Ruby
 def get_days(year, month)
     month_days = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
@@ -59,7 +60,7 @@ if month == 2
 ```
 ###　まとめる
 最後に今まで記述してきたコードをget_daysにまとめる
-```
+```ruby
 def get_days(year, month)
     month_days = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
     if month == 2
