Update and rename 20231104 to 20231104.md

--- a/learning/20231104.md
+++ b/learning/20231104.md
@@ -2,7 +2,7 @@
 11/2にeach文で別の変数をループする方法を学んだが、今回はまた別のループ方法について学んだ。
 
 ## 使い方
-```
+```ruby
 data = [a, b, c]
 data.each_with_index do |d, index|
     puts "#{index + 1}: #{d}”
