--- a/learning/20231106.md
+++ b/learning/20231106.md
@@ -1,6 +1,6 @@
 # randについて
-## randはランダムで数字を取り出してくれるため、占いといったようにランダム要素を組み込みたい時に使う
-＃＃使い方
+randはランダムで数字を取り出してくれるため、占いといったようにランダム要素を組み込みたい時に使う
+## 使い方
 ```
 rand(5)
 ```
